fix: improve link text display on mobile devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -130,6 +130,7 @@ body {
 
 a {
     text-decoration: none;
+    word-wrap: break-word;
 }
 
 img {
